--- a/database project/package.json
+++ b/database project/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.3.2",
+    "express": "^4.18.2",
+    "mssql": "^10.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
