--- a/database project/package.json
+++ b/database project/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "astro": "^3.3.2",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
